--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,6 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerVersion '1.4.32'
         kotlinCompilerExtensionVersion compose_version
     }
 
@@ -46,14 +45,15 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha01'
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha07'
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha08'
+    implementation "com.google.accompanist:accompanist-coil:0.10.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
