--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha01'
     implementation 'androidx.activity:activity-compose:1.3.0-alpha08'
     implementation "com.google.accompanist:accompanist-coil:0.10.0"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha01"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
